<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_launch"
    tools:context=".onboard1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="480dp"
        android:src="@drawable/onboard1"/>


    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="303dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985">

        <LinearLayout
            android:layout_width="386dp"
            android:layout_height="59dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="214dp">

            <TextView
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:text="Search "
                android:textAlignment="textEnd"
                android:textColor="#03A9F4"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10sp"
                android:text="@string/read"
                android:textAlignment="viewStart"
                android:textColor="#FEFEFE"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.716"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:lineSpacingExtra="10sp"
            android:text="purchase"
            android:textAlignment="center"
            android:textColor="#FEFEFE"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.716"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="382dp"
            android:layout_height="76dp"
            android:text="@string/using_search_filters_quickly_and_easily_nfind_the_books_you_need_buy_books_at_the_best_price_on_the_market"
            android:textAlignment="center"
            android:textColor="#D8FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="@+id/img1"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/purple"
        android:backgroundTintMode="add"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>